syntax = "proto3";

option java_package = "com.qianxun.grpc.lib.sysUser";

package sysUser;

import public "google/protobuf/timestamp.proto";
import "sys_role.proto";
import "sys_menu.proto";

service SysUserService {
    rpc GetById (ByIdReq) returns (SysUser) {
    }
    rpc GetList (GetListReq) returns (PageList) {
    }
    rpc Insert (BaseSysUser) returns (Result) {
    }
    rpc Update (BaseSysUser) returns (Result) {
    }
    rpc Delete (ByIdReq) returns (Result) {
    }
}

message ByIdReq {
    int32 id = 1;
}

message GetListReq {
    string query = 1;
    int32 page_size = 2;
    int32 page = 3;
    int32 dept_id = 4;
}

message Result {
    bool success = 1;
    string message = 2;
}

message BaseSysUser {
    int32 id = 1;
    int32 dept_id = 2;
    string name = 3;
    string identification = 4;
    string phone = 5;
    string email = 6;
    string avatar = 7;
    int32 locked = 8;
    string user_name = 10;
    string reset_password_token = 11;
    string password_encrypted = 12;
    string current_token = 15;
    google.protobuf.Timestamp current_sign_in_at = 16;
    google.protobuf.Timestamp last_sign_in_at = 17;
    int32 sign_in_count = 18;

    repeated int32 role_ids = 19;
    repeated int32 permission_ids = 20;

    int32 version = 21;
}

message SysUser {
    int32 id = 1;
    int32 dept_id = 2;
    string name = 3;
    string identification = 4;
    string phone = 5;
    string email = 6;
    string avatar = 7;
    int32 locked = 8;
    int32 deleted = 9;
    string user_name = 10;
    string reset_password_token = 11;
    string password_encrypted = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    string current_token = 15;
    google.protobuf.Timestamp current_sign_in_at = 16;
    google.protobuf.Timestamp last_sign_in_at = 17;
    int32 sign_in_count = 18;
    string dept_name = 19;
    repeated sysRole.SysRole roles = 20;
    repeated sysMenu.SysMenu menus = 21;
    int32 version = 22;
}

message PageList {
    int32 total = 1;
    repeated SysUser sys_users = 2;
}
